<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello world!</string>
    <string name="button_message">I\'m a button!</string>
    <string name="login_text">Login</string>
    <string name="login_hint">login name</string>
    <string name="textpassword_text">Password</string>
    <string name="password_hint">login password</string>
    <string name="switch_text">What does this do?</string>

    <string name="radio_button">Radio Button</string>
    <string name="checkbox_item">CheckBox</string>
    <string name="image_description">Image of Camera Icon</string>
    <string name="flag_desc">Image of Local National Flag</string>
    <string name="login_button">Log in</string>

    <string name="DEFAULT_EMAIL">DefaultEmail</string>
    <string name="SHARED_PREF">SharedPreferencesFile</string>

    <string name="alert_message">Alert Message</string>
    <string name="alert_title">Alert Title</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_message">Are you finished with activity?</string>
    <string name="dialog_title">Alert Message</string>
    <string name="dialog_toast_message">ListItems Activity closed</string>

    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>

    <string name="chat_button">Start Chat</string>
    <string name="send_chat_button">Send</string>
    <string name="chat_text_message_label">Enter text message</string>
    <string name="chat_image_description">Avatar of user</string>

</resources>
